Remove margin arrow to fix on ios

--- a/src/style/05-objects/_objects.screens.scss
+++ b/src/style/05-objects/_objects.screens.scss
@@ -256,10 +256,6 @@ article.boussole_glide {
         font-weight: 700;
     }
 
-    .next_slide {
-        margin-top: 4px;
-    }
-
     .axes {
         display: grid;
         grid-template-rows: repeat(4, minmax(50px, 90px));
